# ChangeLog for sci-mathematics/glpk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/glpk/ChangeLog,v 1.41 2010/01/11 04:11:53 bicatali Exp $

*glpk-4.41 (11 Jan 2010)

  11 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org> -glpk-4.39.ebuild,
  +glpk-4.41.ebuild:
  Version bump

*glpk-4.40 (21 Nov 2009)

  21 Nov 2009; Sébastien Fabbro <bicatali@gentoo.org> -glpk-4.8.ebuild,
  -glpk-4.37.ebuild, -glpk-4.38.ebuild, +glpk-4.40.ebuild:
  Version bump

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> glpk-4.8.ebuild:
  Remove virtual/libc

*glpk-4.39 (14 Aug 2009)

  14 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> +glpk-4.39.ebuild:
  Version bump

*glpk-4.38 (18 Jun 2009)

  18 Jun 2009; Sébastien Fabbro <bicatali@gentoo.org> +glpk-4.38.ebuild:
  Version bump

  17 May 2009; nixnut <nixnut@gentoo.org> glpk-4.35.ebuild:
  ppc stable #245707

  20 Apr 2009; Markus Meier <maekke@gentoo.org> glpk-4.35:
  x86 stable, bug #245707

  08 Apr 2009; Jeroen Roovers <jer@gentoo.org> glpk-4.35.ebuild:
  Stable for HPPA (bug #245707).

*glpk-4.37 (07 Apr 2009)

  07 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org> -glpk-4.29.ebuild,
  +glpk-4.37.ebuild:
  Version bump

  27 Mar 2009; Ferris McCormick <fmccor@gentoo.org> glpk-4.35.ebuild:
  Sparc stable, preparation for bug #245707.

  23 Mar 2009; Jeremy Olexa <darkside@gentoo.org> glpk-4.35.ebuild:
  amd64 stable, bug 245707

  02 Mar 2009; Brent Baude <ranger@gentoo.org> glpk-4.35.ebuild:
  Marking glpk-4.35 ppc64 for bug 245707

  08 Feb 2009; Tobias Klausmann <klausman@gentoo.org> glpk-4.35.ebuild:
  Stable on alpha, bug #245707

*glpk-4.35 (15 Jan 2009)

  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> -glpk-4.32.ebuild,
  +glpk-4.35.ebuild:
  Version bump

  28 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org> glpk-4.32.ebuild:
  Fixed doc install, bug #244710, thanks octoploid

*glpk-4.32 (27 Oct 2008)
