@@ -1,8 +1,8 @@
 DIST glpk-4.35.tar.gz 2174494 RMD160 1e4594b9ad0da0fcbfa7842a5e4557af4a7d0fae SHA1 d125e5b9ea593f80d1555032ca2e2148c64ae9d3 SHA256 bdbf86176b6dba7a977b520ddbc77f3e7d620ce8f418d764f4dd95a89a54b5b6
-DIST glpk-4.40.tar.gz 2477955 RMD160 7ebf2644fbfb43afa41e7b93938923c94ab234a5 SHA1 d89e9ebaef776a5a704fc584572223ed51c029d9 SHA256 f7dcf9a6c0021de8205664e7d5dc5836e7a5f13d925737a6eb6260c786bed4c6
 DIST glpk-4.41.tar.gz 2846813 RMD160 1fb60f0803e2707f7c7772981e859efa629c5a39 SHA1 2699e10b79b2c72c9eb4d373e3b3060dcf80f468 SHA256 061a86279b25cf1e6527e6469557264742322986a05aa0170d6909da4532159b
+DIST glpk-4.42.tar.gz 3193588 RMD160 5b0cf98e7b1132af9129be7ef01df224d5467a85 SHA1 fbd4ebb7bbe68368988362e4937aa38f75b0137e SHA256 1eff071c990084ff2f7c7baae637f2f7c21bee00d30560c1010c88ad1dc30dfa
 EBUILD glpk-4.35.ebuild 1439 RMD160 0e06e84a0f85962e22c0ec031721b1e1f0178423 SHA1 8d7b7f7f8b5267106e221b7d55c664b94537ecba SHA256 ddbef11b94b574966c60d0898fc2abc2a757fae65d910380d3b6c48c36cd7abb
-EBUILD glpk-4.40.ebuild 1642 RMD160 fb4d04cd1781c3ab4f585fc94c777761219e7463 SHA1 bdede159a84641b34957a70e5736e48fb41f20c8 SHA256 acf9227197e3d6fcb5a622317b920ed9be2d3fe4bb9cb91493ca2d23773167dc
 EBUILD glpk-4.41.ebuild 1642 RMD160 80245074aacba289bf0bb773cb6acb006476826d SHA1 89398d1d38a29f85b75145d674393d7b7d47669b SHA256 95172a8671c6f42a8f917674ade270015ad3927fe612a6ca0ce71a3a0e91a11d
-MISC ChangeLog 6223 RMD160 ec1dcccb56f4df517d34c0255f8299d85e6d460f SHA1 4ac04593d12b9a223f63e4de5a8b1fe0f296e726 SHA256 ab912c8cfadfd32e122546b85dbbece54784d91331494cbab0ae924f38e76224
+EBUILD glpk-4.42.ebuild 1636 RMD160 3d35a4e67886d259df073baa218eb8fc5ea2f3bd SHA1 66395ef39e549aa1e39882f21066fb48da59b2cf SHA256 fd4535a1878d4c3fcdedbc8b172a22ce150bc0691464f19ada5414ecd909f663
+MISC ChangeLog 6360 RMD160 e9695c2f07ad683934e8ade590fb4b099907d953 SHA1 7f06888f337bfd33d04e45ebe91e03d5dfa87620 SHA256 410a9a2416df5ae7765663328745b2c4a5fe9685b69191494616bda2c23ba108
 MISC metadata.xml 891 RMD160 816d9dcb9d4a0726eaa5b49785201c93897019fb SHA1 50e05f61c89ad901803af5bb39ab4569b2f8cad5 SHA256 bd601c25c8e85573582c620a6bb2fd9de140f5668d5fedc89e172fe0f4818051
