@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/glpk
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/glpk/ChangeLog,v 1.41 2010/01/11 04:11:53 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/glpk/ChangeLog,v 1.42 2010/01/31 21:55:05 bicatali Exp $
+
+*glpk-4.42 (31 Jan 2010)
+
+  31 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org> -glpk-4.40.ebuild,
+  +glpk-4.42.ebuild:
+  Version bump
 
 *glpk-4.41 (11 Jan 2010)
 
